refactor: Feed, Follow, Notification 리팩토링 (#140)
- 사용하지 않는 import문 제거
- 사고의 depth 줄이기
- 메서드 순서 정리

Resolves: #139